Added new references to bib and ch1

--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,13 @@
   volume={2014-06}
 }
 
+@article{iso9906,
+  title={Rotodynamic pumps — Hydraulic performance acceptance tests — Grades 1, 2 and 3},
+  author={BS EN ISO 9906},
+  journal={BSI Standards Publication},
+  volume={2012}
+}
+
 @article{esen_özdemir_2016, 
     title={A Case Study of Determining Energy Efficiency in Squirrel Cage Induction Motor According to IEC 60034-2-1:2014 Standard}, 
     DOI={10.24084/repqj14.374}, 
@@ -46,3 +53,11 @@
   year={2019}
 }
 
+@inproceedings{caetano2018energy,
+  title={Energy efficiency eletric motor systems: Motor replacement analysis—A case study},
+  author={Caetano, Rebeca GD and Pontes, Maria GSR and Costa, Victor LL and Pontes, Ricardo ST and Neto, Clodomir Comaru},
+  booktitle={2018 Simposio Brasileiro de Sistemas Eletricos (SBSE)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
