--- a/uet_thesis.tex
+++ b/uet_thesis.tex
@@ -155,10 +155,10 @@ Abstract.
 % Just uncomment the lines as you write the chapters
 
 \input{./Chapters/Chapter1} % Introduction 
-\input{./Chapters/Chapter2} % What to Write 
-\input{./Chapters/Chapter3} % Experimental Setup
-\input{./Chapters/Chapter4} % Experiment 1
-\input{./Chapters/Chapter5} % Experiment 2
+% \input{./Chapters/Chapter2} % What to Write 
+% \input{./Chapters/Chapter3} % Experimental Setup
+% \input{./Chapters/Chapter4} % Experiment 1
+% \input{./Chapters/Chapter5} % Experiment 2
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
