added references to ch 1 and 2

--- a/references.bib
+++ b/references.bib
@@ -20,22 +20,13 @@
   volume={2012}
 }
 
-@article{esen_özdemir_2016, 
+@article{esenozdemir2016, 
     title={A Case Study of Determining Energy Efficiency in Squirrel Cage Induction Motor According to IEC 60034-2-1:2014 Standard}, 
     DOI={10.24084/repqj14.374}, 
     journal={Renewable Energy and Power Quality Journal}, 
     author={Esen, G. Kaan and Özdemir, E.}, 
     year={2016}, 
     pages={506–511}
-}
-
-@inproceedings{boglietti2011induction,
-  title={Induction motor EU standards for efficiency evaluation: The scenario after IEC 60034-2-1},
-  author={Boglietti, A and Cavagnino, A and Vaschetto, S},
-  booktitle={IECON 2011-37th Annual Conference of the IEEE Industrial Electronics Society},
-  pages={2786--2791},
-  year={2011},
-  organization={IEEE}
 }
 
 @inproceedings{safin2018calculation,
@@ -59,5 +50,35 @@
   booktitle={2018 Simposio Brasileiro de Sistemas Eletricos (SBSE)},
   pages={1--6},
   year={2018},
+  organization={IEEE}
+}
+
+@article{dowding2019minimum,
+  title={The Minimum Energy Efficiency Standards: Energy Performance Certificates, carrying out energy efficiency improvements and the impact on dilapidations},
+  author={Dowding, Nicholas and Lemmon, Stephen and White, Philip},
+  journal={Journal of Building Survey, Appraisal \& Valuation},
+  volume={8},
+  number={2},
+  pages={102--111},
+  year={2019},
+  publisher={Henry Stewart Publications}
+}
+
+@article{manoharan2009review,
+  title={Review on efficiency improvement in squirrel cage induction motor by using DCR technology},
+  author={Manoharan, Subramanian and Devarajan, Nanjundappan and Deivasahayam, Subbarayan M and Ranganathan, Gopalakrishnan},
+  journal={Journal of Electrical Engineering},
+  volume={60},
+  number={4},
+  pages={227--236},
+  year={2009}
+}
+
+@inproceedings{rai2016generalized,
+  title={Generalized modeling model of three phase induction motor},
+  author={Rai, Tripti and Debre, Prashant},
+  booktitle={2016 International Conference on Energy Efficient Technologies for Sustainability (ICEETS)},
+  pages={927--931},
+  year={2016},
   organization={IEEE}
 }
