--- a/uet_thesis.tex
+++ b/uet_thesis.tex
@@ -154,8 +154,8 @@ Abstract.
 % Include the chapters of the thesis, as separate files
 % Just uncomment the lines as you write the chapters
 
-\input{./Chapters/Chapter1} % Introduction 
-% \input{./Chapters/Chapter2} % What to Write 
+\include{./Chapters/Chapter1} % Introduction 
+\include{./Chapters/Chapter2} % What to Write 
 % \input{./Chapters/Chapter3} % Experimental Setup
 % \input{./Chapters/Chapter4} % Experiment 1
 % \input{./Chapters/Chapter5} % Experiment 2
