Final review remaining

--- a/uet_thesis.tex
+++ b/uet_thesis.tex
@@ -141,7 +141,7 @@ I would express a deep sense of gratitude and respect to my Advisor, Dr. Muhamma
 \abstract{
 %\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 
-Abstract.
+Induction motors are widely being used in domestic and industrial applications. In agricultural countries like Pakistan, they are widely being used in water pumping applications. This project aims to design a test bench that can be used to test these motors. This is a supplement to the HEC TDF-02-173 project, which aims to develop test benches for the motor pump sets available in our local market under the international standards, IEC-60034-2-1:2014 for motors and IS0-9906 for pumps. This project specifically proposes some design configurations for test bench and test them in a simulated environment, so that their feasibility and possible issues can be studied before being implemented on actual hardware. Simulink Simscape Physical Systems library has been used for this purpose, which provides a quite accurate simulation of electrical, mechanical, thermal and hydraulic systems, and so the a quite in-depth test can be performed on the motors.
 
 }
 \clearpage  % Abstract ended, start a new page
@@ -156,9 +156,9 @@ Abstract.
 
 \include{./Chapters/Chapter1} % Introduction 
 \include{./Chapters/Chapter2} % What to Write 
-% \input{./Chapters/Chapter3} % Experimental Setup
-% \input{./Chapters/Chapter4} % Experiment 1
-% \input{./Chapters/Chapter5} % Experiment 2
+\input{./Chapters/Chapter3} % Experimental Setup
+\input{./Chapters/Chapter4} % Experiment 1
+\input{./Chapters/Chapter5} % Experiment 2
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
