--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,8 @@
+@article{tandel2019energy,
+  title={Energy Conservation by Energy Efficient Motor (Case study of Paper Industry)},
+  author={Tandel, Brijesh R and Shukla, Chinmay D},
+  year={2019}
+}
 
 @article{doppelbauer12iec,
   title={IEC Motor Efficiency classes},
@@ -38,12 +43,6 @@
   organization={IEEE}
 }
 
-@article{tandel2019energy,
-  title={Energy Conservation by Energy Efficient Motor (Case study of Paper Industry)},
-  author={Tandel, Brijesh R and Shukla, Chinmay D},
-  year={2019}
-}
-
 @inproceedings{caetano2018energy,
   title={Energy efficiency eletric motor systems: Motor replacement analysis—A case study},
   author={Caetano, Rebeca GD and Pontes, Maria GSR and Costa, Victor LL and Pontes, Ricardo ST and Neto, Clodomir Comaru},
@@ -81,4 +80,14 @@
   pages={927--931},
   year={2016},
   organization={IEEE}
+}
+
+@inproceedings{shao2017model,
+  title={Model-based safety analysis of a control system using Simulink and Simscape extended models},
+  author={Shao, Nian and Zhang, Shuguang and Liang, Hui},
+  booktitle={MATEC Web of Conferences},
+  volume={139},
+  pages={00219},
+  year={2017},
+  organization={EDP Sciences}
 }
