First review changes

--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,13 @@
   volume={2014-06}
 }
 
+@article{iec6003430,
+  title={Rotating electrical machines - Part 30-1: Efficiency classes of line operated AC motors (IE code)},
+  author={IEC 60034-30-1},
+  journal={Edition 2.0},
+  volume={2014-06}
+}
+
 @article{iso9906,
   title={Rotodynamic pumps — Hydraulic performance acceptance tests — Grades 1, 2 and 3},
   author={BS EN ISO 9906},
@@ -90,4 +97,20 @@
   pages={00219},
   year={2017},
   organization={EDP Sciences}
+}
+
+@book{lyshevski2018electromechanical,
+  title={Electromechanical Systems, Electric Machines, and Applied Mechatronics},
+  author={Lyshevski, S.E. and CRC Press},
+  isbn={9781351453271},
+  url={https://books.google.com.pk/books?id=wNnpwQEACAAJ},
+  year={2018},
+  publisher={CRC Press}
+}
+
+@book{wang2020pid,
+  title={PID Control System Design and Automatic Tuning Using MATLAB/Simulink},
+  author={Wang, Liuping},
+  year={2020},
+  publisher={John Wiley \& Sons}
 }
