--- a/uet_thesis.tex
+++ b/uet_thesis.tex
@@ -160,7 +160,7 @@ Induction motors are widely being used in domestic and industrial applications. 
 \input{./Chapters/Chapter4} % Experiment 1
 \input{./Chapters/Chapter5} % Experiment 2
 
-\bibliographystyle{ieeetr}
+\bibliographystyle{unsrt}
 \bibliography{references}
 %\input{./Chapters/Chapter6} % Results and Discussion
 
