--- a/uet_thesis.tex
+++ b/uet_thesis.tex
@@ -47,7 +47,7 @@
 % Set up the Title Page
 \title  {Development of test bench model for evaluating the efficiency of induction motors}
 \session {2017 -- Fall}
-\advisor {Dr. Muhammad Tahir Izhar}
+\advisor {Dr. Tahir Izhar}
 \authors {
 Arslan Ahmad ~~~ 2017(F)-MS-EE-32 }
 
